--- a/.gitmodules
+++ b/.gitmodules
@@ -1,30 +1,40 @@
 [submodule "radar-prmt-android"]
 	path = radar-prmt-android
 	url = https://github.com/RADAR-base/radar-prmt-android.git
+	branch = deploy/trivial_login
 [submodule "RADAR-Schemas"]
 	path = RADAR-Schemas
 	url = https://github.com/RADAR-base/RADAR-Schemas.git
+	branch = dev
 [submodule "radar-commons"]
 	path = radar-commons
 	url = https://github.com/RADAR-base/radar-commons.git
+	branch = deploy/dev
 [submodule "radar-android-application-status"]
 	path = radar-android-application-status
 	url = https://github.com/RADAR-base/radar-android-application-status.git
+	branch = deploy/dev
 [submodule "radar-commons-android"]
 	path = radar-commons-android
 	url = https://github.com/RADAR-base/radar-commons-android.git
+	branch = deploy/dev
 [submodule "radar-android-phone"]
 	path = radar-android-phone
 	url = https://github.com/RADAR-base/radar-android-phone.git
+	branch = deploy/dev
 [submodule "radar-android-eegsync"]
 	path = radar-android-eegsync
 	url = https://github.com/sboettcher/radar-android-eegsync.git
+	branch = deploy/dev
 [submodule "radar-android-empatica"]
 	path = radar-android-empatica
 	url = https://github.com/RADAR-base/radar-android-empatica.git
+	branch = deploy/dev
 [submodule "radar-android-biovotion"]
 	path = radar-android-biovotion
 	url = https://github.com/RADAR-base/radar-android-biovotion.git
+	branch = deploy/gap_restructure
 [submodule "RADAR-Docker"]
 	path = RADAR-Docker
 	url = https://github.com/RADAR-base/RADAR-Docker.git
+	branch = dev
